@@ -1,3 +1,7 @@
+2008-10-21  Richard Guenther  <rguenther@suse.de>
+
+	* gcc.dg/tree-ssa/alias-19.c: New testcase.
+
 2008-10-19  Jerry DeLisle  <jvdelisle@gcc.gnu.org
 
 	PR libfortran/37707
